--- a/scss/editor/lists/tasks/_tasks-doodle-boxes.scss
+++ b/scss/editor/lists/tasks/_tasks-doodle-boxes.scss
@@ -19,7 +19,7 @@
                 background-color: var(--checkbox-color);
             }
 
-            &:hover::after {
+            &:where(:hover)::after {
                 background-color: var(--checkbox-color-hover);
             }
         }
