--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -6,6 +6,7 @@
     --callout-content-padding: 0;
     --image-shadow-offset: 0;
     --hr-color: rgba(var(--callout-color), var(--callout-border-opacity));
+    --heading-spacing: var(--p-spacing);
 
     max-width: 300px;
     
