--- a/css/editor/callouts/callout-fas-infobox.css
+++ b/css/editor/callouts/callout-fas-infobox.css
@@ -296,15 +296,16 @@ body {
   clip-path: polygon(0 0, 100% 100%, 0 100%);
 }
 
+/* Position */
 .markdown-preview-view .callout[data-callout=fas-infobox],
 .markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=right] {
   float: right;
-  margin-left: calc(var(--overflow-width) + var(--size-4-2));
+  margin-left: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 
 .markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=left] {
   float: left;
-  margin-right: calc(var(--overflow-width) + var(--size-4-2));
+  margin-right: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 
 .markdown-preview-view .callout[data-callout=fas-infobox][data-callout-metadata~=center] {
