--- a/css/editor/image.css
+++ b/css/editor/image.css
@@ -16,13 +16,13 @@ body {
 .markdown-rendered .image-embed:is([alt~=right], [alt~=float-right]) {
   float: right;
   clear: right;
-  margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
+  margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
 }
 
 .markdown-rendered .image-embed:is([alt~=left], [alt~=float-left]) {
   float: left;
   clear: left;
-  margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
+  margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
 }
 
 .image-embed[alt~=gray] {
