--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -1,7 +1,6 @@
 /*
     Inspired by ITS theme's infobox callouts from SlRvb (https://publish.obsidian.md/slrvb-docs/ITS+Theme/Callouts/Callout+-+Infoboxes)
 */
-
 .callout[data-callout="fas-infobox"] {
     --callout-content-padding: 0;
     --image-shadow-offset: 0;
@@ -293,15 +292,16 @@ body {
     }
 }
 
+/* Position */
 
 .markdown-preview-view .callout[data-callout="fas-infobox"],
 .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="right"] {
     float: right;
-    margin-left: calc(var(--overflow-width) + var(--size-4-2));
+    margin-left: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="left"] {
     float: left;
-    margin-right: calc(var(--overflow-width) + var(--size-4-2));
+    margin-right: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
 }
 .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="center"] {
     float: unset;
