--- a/snippets/editor/callouts/callout-paper-fold.css
+++ b/snippets/editor/callouts/callout-paper-fold.css
@@ -52,7 +52,7 @@ Author: ElsaTam (Kapirklaa in Discord)
     --corner-width-n: 80;
     --corner-height-n: 20;
 }*/
-.theme-dark {
+.theme-light {
   --paper-fold-color: 255, 247, 64;
 }
 
