--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -212,7 +212,7 @@ settings:
     - 
         id: fas-float-inline-margin
         title: Inline margin (left/right) for float elements
-        description: Float elements contains for example the fas-infobox callout, the polaroid callout, floating images, etc.
+        description: Float elements are, for example, the fas-infobox callout, the polaroid callout, floating images, etc.
         type: variable-number
         format: px
         default: 12
