--- a/scss/editor/_aside.scss
+++ b/scss/editor/_aside.scss
@@ -1,4 +1,5 @@
 @forward '../shared/markdown-container';
+@forward '../shared/list-with-float';
 
 .markdown-preview-view aside,
 .markdown-preview-view .aside-left,
