--- a/scss/editor/callouts/_callout-profile.scss
+++ b/scss/editor/callouts/_callout-profile.scss
@@ -21,6 +21,10 @@
         margin-left: var(--size-4-3);
     }
 
+    & :is(ul, ol) {
+        display: flow-root;
+    }
+
     & .callout-content>p:first-child img {
         max-width: 150px;
         position: relative;
