--- a/snippets/editor/callouts/callout-fas-infobox.css
+++ b/snippets/editor/callouts/callout-fas-infobox.css
@@ -5,6 +5,10 @@ Author: ElsaTam (Kapirklaa in Discord)
 /*
     Inspired by ITS theme's infobox callouts from SlRvb (https://publish.obsidian.md/slrvb-docs/ITS+Theme/Callouts/Callout+-+Infoboxes)
 */
+.markdown-rendered :is(ul, ol) {
+  display: flow-root;
+}
+
 .callout[data-callout=fas-infobox] {
   --callout-content-padding: 0;
   --image-shadow-offset: 0;
