--- a/snippets/editor/callouts/callout-pinned.css
+++ b/snippets/editor/callouts/callout-pinned.css
@@ -24,8 +24,8 @@ body {
   --pushpin-scale-collapsed: 0.8;
   position: relative;
   margin: 0 auto;
-  background-color: var(--color-base-100);
-  color: var(--color-base-00);
+  background-color: white;
+  color: black;
 }
 .callout[data-callout=pinned][data-callout-metadata~=small] {
   width: 200px;
@@ -69,9 +69,20 @@ body {
 }
 .callout[data-callout=pinned] .callout-content {
   font-family: var(--callout-font-body);
+  border: none;
 }
 .callout[data-callout=pinned] p:last-of-type {
   margin-bottom: 0;
+}
+
+.theme-light .callout[data-callout=pinned]:not([data-callout-metadata~=dark]) {
+  --callout-border-width: 1px;
+  --callout-border-opacity: 0.15;
+}
+
+.callout[data-callout=pinned][data-callout-metadata~=dark] {
+  background-color: black;
+  color: white;
 }
 
 body {
