--- a/snippets/editor/callouts/callout-timeline.css
+++ b/snippets/editor/callouts/callout-timeline.css
@@ -282,6 +282,42 @@ body {
   font-weight: var(--font-bold);
 }
 
+@container markdown-view (width < 500px) {
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content {
+    --bullet-size: 6px;
+    --bullet-numbered-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: var(--line-thickness);
+  }
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content::after {
+    -webkit-mask-position: right, center;
+  }
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content > *:nth-child(even)::after {
+    left: unset;
+    right: var(--shift-bullet);
+  }
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content > *:nth-child(even)::before {
+    left: unset;
+    right: var(--shift-segment);
+  }
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content > *::after {
+    --shift-bullet: calc(-1 * (
+          var(--bullet-size) * 0.5
+        + var(--bullet-border-width)
+        + var(--line-thickness) * 0.5
+        + var(--card-border-width) * 2
+    ));
+  }
+  .callout[data-callout=timeline]:not([data-callout-metadata~=horizontal]) > .callout-content > *::before {
+    width: calc(var(--line-thickness) * 0.5);
+    --shift-segment: calc(-1 * (
+          var(--line-thickness) * 0.5
+        + var(--card-border-width)
+    ));
+  }
+}
 body {
   --rope-segment-vertical: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='0.5' stroke-linecap='round' stroke-linejoin='round' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cpath d='M 14.667729,-0.03812381 C 17.411371,3.3239782 18.324101,6.5246684 14.740774,11.984979'/%3E%3Cpath d='m 14.740774,24.008811 v 0'/%3E%3Cpath d='M 5.5421425,-0.03777659 C 5.8824781,2.6142947 7.9176748,4.9071178 10.867642,7.9241271 c 5.188949,5.3068839 8.826221,8.5371209 3.873132,16.0846839'/%3E%3Cpath d='m 8.0373013,4.8528187 c -4.7172275,6.7220493 -2.358609,9.7882593 2.8303407,15.0951393 1.435009,1.467627 2.751349,2.776428 3.800139,4.061644'/%3E%3Cpath d='M 8.0373013,16.87665 C 6.0017796,19.777265 5.2837706,21.997176 5.5421707,24.010125'/%3E%3C/svg%3E");
   --rope-segment-horizontal: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='1' stroke-linecap='round' stroke-linejoin='round' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cg transform='rotate(90,12,11.986001)'%3E%3Cpath d='M 14.667729,-0.03812381 C 17.411371,3.3239782 18.324101,6.5246684 14.740774,11.984979'/%3E%3Cpath d='m 14.740774,24.008811 v 0'/%3E%3Cpath d='M 5.5421425,-0.03777659 C 5.8824781,2.6142947 7.9176748,4.9071178 10.867642,7.9241271 c 5.188949,5.3068839 8.826221,8.5371209 3.873132,16.0846839'/%3E%3Cpath d='m 8.0373013,4.8528187 c -4.7172275,6.7220493 -2.358609,9.7882593 2.8303407,15.0951393 1.435009,1.467627 2.751349,2.776428 3.800139,4.061644'/%3E%3Cpath d='M 8.0373013,16.87665 C 6.0017796,19.777265 5.2837706,21.997176 5.5421707,24.010125'/%3E%3C/g%3E%3C/svg%3E");
