Callout metadata: add accent color

--- a/css/editor/callouts/callout-style.css
+++ b/css/editor/callouts/callout-style.css
@@ -23,3 +23,10 @@ body {
 .callout-content {
   border-top: var(--callout-border-width) dashed rgba(var(--callout-color), var(--callout-border-opacity));
 }
+
+.callout[data-callout-metadata~=accent] > .callout-title {
+  background: linear-gradient(to right, rgb(from var(--color-accent) r g b/0.1), transparent);
+}
+.callout[data-callout-metadata~=accent] > .callout-content {
+  border-top: var(--callout-border-width) dashed rgb(from var(--color-accent) r g b/var(--callout-border-opacity));
+}
