--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -13,6 +13,18 @@
 .callout[data-callout-metadata~="purple"] { --callout-color: var(--color-purple-rgb);}
 .callout[data-callout-metadata~="pink"]   { --callout-color: var(--color-pink-rgb);}
 
+.callout[data-callout-metadata~="accent"] {
+    border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+    background-color: rgb(from var(--color-accent) r g b / 0.1);
+
+    > .callout-title {
+        color: var(--color-accent);
+
+        .svg-icon {
+            color: var(--color-accent);
+        }
+    }
+}
 
 .callout[data-callout-metadata~="no-bg"],
 .callout[data-callout-metadata~="no-background"] {
