Sci fi class: add support for accent color in callout

--- a/scss/cssclasses/_sci-fi.scss
+++ b/scss/cssclasses/_sci-fi.scss
@@ -138,6 +138,10 @@ body {
                 calc(20px + var(--callout-border-width) * 0.5) var(--callout-border-width),
                 var(--callout-border-width) calc(20px + var(--callout-border-width) * 0.5));
         }
+
+        &:is([data-callout-metadata~="accent"])::before {
+            background: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+        }
     }
 }
 
