Callout table-grid: rename to table-cards + doc

--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -18,7 +18,7 @@
 @use 'callout-polaroid';
 @use 'callout-profile';
 @use 'callout-screen';
-@use 'callout-table-grid';
+@use 'callout-table-cards';
 @use 'callout-timeline';
 
 @use 'callouts-metadata';
