Footer image code

--- a/scss/cssclasses/_cssclasses.scss
+++ b/scss/cssclasses/_cssclasses.scss
@@ -2,6 +2,7 @@
 @use 'black-and-white';
 @use 'columns';
 @use 'confidential';
+@use 'footer-img';
 @use 'minimalist';
 @use 'movie-script';
 @use 'newspaper';
