--- a/scss/editor/callouts/_callout-table-cards.scss
+++ b/scss/editor/callouts/_callout-table-cards.scss
@@ -1,6 +1,7 @@
 .callout[data-callout="table-cards"] {
     --table-background: rgba(var(--mono-rgb-0), 0.2);
     --table-row-alt-background: rgba(var(--mono-rgb-0), 0.2);
+    --callout-blend-mode: normal;
 
     padding: 0;
     background: none;
@@ -55,5 +56,14 @@
 
     td:last-child {
         flex-grow: 1;
+    }
+}
+
+.callout[data-callout="table-cards"][data-callout-metadata~="accent"] {
+    tr {
+        border-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
+    }
+    td:first-child {
+        border-bottom-color: rgb(from var(--color-accent) r g b / var(--callout-border-opacity));
     }
 }
