--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -79,3 +79,7 @@
     clear: left;
     margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
 }
+
+.callout[data-callout-metadata~="no-blending"] {
+    --callout-blend-mode: normal;
+}
