--- a/css/editor/callouts/callouts-metadata.css
+++ b/css/editor/callouts/callouts-metadata.css
@@ -51,6 +51,14 @@ Author: ElsaTam (Kapirklaa in Discord)
   --callout-color: var(--color-pink-rgb);
 }
 
+.callout[data-callout-metadata~=black] {
+  --callout-color: 0, 0, 0;
+}
+
+.callout[data-callout-metadata~=white] {
+  --callout-color: 255, 255, 255;
+}
+
 [data-callout-metadata~=accent] {
   border-color: rgb(from var(--color-accent) r g b/var(--callout-border-opacity));
   background-color: rgb(from var(--color-accent) r g b/0.1);
