Callout: full-width-image

--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -10,6 +10,7 @@
 @use 'callout-film-strip';
 @use 'callout-grid';
 @use 'callout-fas-infobox';
+@use 'callout-full-width-image';
 @use 'callout-letter';
 @use 'callout-masonry';
 @use 'callout-paper-fold';
