--- a/scss/editor/callouts/_callout-full-width-image.scss
+++ b/scss/editor/callouts/_callout-full-width-image.scss
@@ -21,6 +21,8 @@ $sel: $sel + ")";
     --image-shadow-offset: 0;
     --p-spacing: 0;
 
+    position: relative;
+
 
     .callout-content {
         font-size: 0;
