--- a/css/editor/embeds/embed-wide.css
+++ b/css/editor/embeds/embed-wide.css
@@ -7,7 +7,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   container: markdown-view/inline-size;
 }
 
-.markdown-preview-view [alt~=wide]:is(img, .markdown-embed, .file-embed) {
+.markdown-preview-view [alt~=wide]:is(img:not(.image-embed img), .image-embed, .markdown-embed, .file-embed) {
   position: relative;
   --w: calc(0.95 * (100cqw + 2 * var(--file-margins)));
   width: var(--w);
